# weiroll-rs

./: .gitignore  Cargo.toml
src/: calls.rs  cmds.rs  error.rs  lib.rs  planner.rs
src/bindings/: command_builder.rs  command_builder_harness.rs  erc20.rs  events.rs  executor_token.rs  lib_tupler.rs  math.rs  multi_return.rs  payable.rs  revert.rs  sender.rs  strings.rs
