[package]
name = "weiroll"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
bitflags = "2"
bytes = "1.4.0"
slotmap = "1.0.7"
thiserror = "2.0.12"
tracing = "0.1.41"

# Alloy
alloy = { version = "1.0.6", features = ["full", "eip712"] }

[dev-dependencies]
tokio = { version = "1.21", features = ["macros"] }
